@@ -44,6 +44,7 @@
          "requires" : {
             "App::Cmd" : "0.330",
             "App::Fasops" : "v0.5.16",
+            "App::RL" : "v0.3.0",
             "App::Rangeops" : "v0.1.0",
             "Bio::Phylo" : "v2.0.1",
             "File::Find::Rule" : "0.34",
