@@ -16,6 +16,7 @@ requires 'String::Similarity', '1.04';
 requires 'Template',           '2.26';
 requires 'Tie::IxHash',        '1.23';
 requires 'YAML::Syck',         '1.29';
+requires 'App::RL',            '0.3.0';
 requires 'App::Fasops',        '0.5.16';
 requires 'App::Rangeops',      '0.1.0';
 requires 'perl',               '5.018001';
