@@ -5,6 +5,8 @@ Revision history for Perl extension App-Egaz
         - Try hard to find rmOutToGFF3.pl
     - `egaz prepseq`
         - Simplify header for sequences in directory
+    - `egaz template`
+        - Add 7_multi_aligndb.sh
 
 0.1.3 2018-04-22T20:03:24Z
     - `egaz template`
